blueGreen/nginx/blue-ingress/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  creationTimestamp: null
  labels:
    app: blue
    app.kubernetes.io/instance: blue
  name: blue
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blue
    deploymentconfig: blue
  sessionAffinity: None
  type: ClusterIP
