blueGreen/nginx/blue-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-virtual-host-ingress-green
spec:
  rules:
  - host: nginx-blue.apps.cluster-3ded.blue.osp.opentlc.com
    http:
      paths:
      - backend:
          serviceName: blue-nginx-service
          servicePort: 8080
